--- a/w3_band/index.html
+++ b/w3_band/index.html
@@ -74,6 +74,28 @@
 
 
             </div>
+
+
+
+            <div class="tour-section">
+                <div class="content-section">
+                    <h2 class="section-heading text-white">TOUR</h2>
+                    <p class="section-sub-heading text-white">Remember to book your tickets!</p>
+
+
+                    <ul class="ticket-list">
+                        <li>September <span class="sold-out">Sold out</span></li>
+                        <li>October <span class="sold-out">Sold out</span></li>
+                        <li>November <span class="quantily">3</span></li>
+                    </ul>
+                </div>
+            </div>
+
+
+            <div class="content-section">
+                <h2 class="section-heading">CONTACT</h2>
+                <p class="section-sub-heading">Fan? Drop a note!</p>
+            </div>
         </div>
 
         <div id="footer">
